# DPP

./: .clabot  .clang-format  .clang-tidy  .cspell.json  .gitattributes  .gitignore  .gitmodules  .misspell-fixer.ignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  SECURITY.md  build.bat  build.inter  cmake_install.cmake  conanfile.py  config.example.json  dpp-config-version.cmake  dpp.rc  install_manifest.txt  makerelease.sh  meson.build  meson_options.txt  sign.sh  sslclient.cpp  sslclient.h  wsclient.cpp  wsclient.h
.circleci/: config.yml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: code_change_template.md  docs_change_template.md
.github/workflows/: arm.yml  build_check.yml  ci.yml  clang-format-check.yml  codeql-analysis.yml  codeql.yml  construct-vcpkg-info.yml  dependency-review.yml  docker.yml  documentation-check.yml  documentation.yml  gitguardian.yml  labeler.yml  qodana_code_quality.yml  release-documentation.yml  scorecard.yml  sitemap.yml  spelling.yml  stale.yml  target-master.yml  test-docs-examples.yml  update.yml
Vcpkg/versions/: baseline.json
buildtools/: changelog.php  close-master-pr.php  emojis.php  make_coro_struct.php  make_struct.php  make_sync_struct.php  make_vcpkg.php
buildtools/classes/: StructGeneratorInterface.php
cmake/: ARM64ToolChain.cmake  ARMHFToolChain.cmake  ARMv6ToolChain.cmake  ARMv7ToolChain.cmake  CMakeWindows.cmake  CPackSetup.cmake  DetectArchitecture.cmake  DetermineVersion.cmake  FindOpus.cmake  FindSodium.cmake  GenerateProductVersion.cmake  LINUXx86ToolChain.cmake  MSVCSTDModule.cmake  PostBuild.cmake  PostInstall.cmake  PrepareOpusWindows.cmake  VersionInfo.in  VersionResource.rc  Win32Toolchain.cmake  colour.cmake  dpp-config.cmake  dppConfig.cmake.in  epoll.cmake  kqueue.cmake  libdpp-config.cmake
cmake/Raw-Files/: Bottom-Of-Portfile.cmake  Bottom-Of-Version-File.json  Bottom-Of-Version-File.txt  Middle-Of-Portfile.cmake  Top-Of-Portfile.cmake  Top-Of-Version-File.json  Top-Of-Version-File.txt
cmake/modules/: FindOpus.cmake  FindSodium.cmake
conan/: conanfile.py
docpages/: 01_frequently_asked_questions.md  01_installing.md  02_build.md  02_building_a_bot.md  02_disdppgloss.md  03_example_programs.md  03_installing.md  04_advanced_reference.md  04_building_a_bot.md  05_deprecated_list.md  05_example_programs.md  06_advanced_reference.md  07_deprecated_list.md  INDEX.md  Z_01_FAQ.md  Z_02_BUILD_LINUX.md  Z_03_BUILD_WIN.md  Z_04_01_FIRST_BOT.md  Z_04_02_SOUND_BOARD.md  Z_04_BUILD_MAC.md  Z_04_EXAMPLE.md  Z_05_EXAMPLE.md  Z_06_CLUSTERS.md  Z_06_EVENT.md  Z_07_REST.md  Z_07_THREADMODEL.md  disdppgloss.md  footer.html  footer.template.html  frequently_asked_questions.md  header.html  header.template.html  makedocs-gh-single.php  makedocs-gh.php  makedocs.php  style.css
docpages/advanced_reference/: automating-with-jenkins.md  clusters_shards_and_guilds.md  coding_style_standards.md  coroutines.md  docs-style-standards.md  docs_style_standards.md  governance.md  lambdas_and_locals.md  roadmap.md  security.md  separate-events.md  shardless-webhook-events.md  thread_model.md  unit_tests.md  voice_model.md
docpages/building/: 02_build.md  archlinux.md  freebsd.md  linux.md  (+4 more)
docpages/example_code/: CMakeLists.txt  attachments1.cpp  attachments2.cpp  attachments3.cpp  autocomplete.cpp  cache_messages.cpp  callbacks.cpp  clearing_slashcommands.cpp  collect_reactions.cpp  commandhandler.cpp  components.cpp  components2.cpp  components3.cpp  components3_rolemenu.cpp  components_v2.cpp  context_menus.cpp  coro_awaiting_events.cpp  coro_expiring_buttons.cpp  coro_intro.cpp  coro_simple_commands1.cpp  coro_simple_commands2.cpp  default_select_value.cpp  detecting_messages.cpp  editing_message_after_click.cpp  editing_message_after_click2.cpp  editing_messages.cpp  editing_messages1.cpp  editing_messages2.cpp  editing_messages3.cpp  embeds.cpp  ephemeral.cpp  eval.cpp  eval.h  firstbot.cpp  firstbot1.cpp  firstbot2.cpp  firstbot3.cpp  firstbot4.cpp  firstbot5.cpp  firstbot6.cpp  (+36 more)
docpages/example_code/coding_style_standards/: comments.cpp  curly_braces.cpp  dot_notation.cpp  fluent_design.cpp  fluent_design2.cpp  lists.cpp  symbol_exporting.cpp
example/: simple_example.cpp
include/: dpp.h  wsclient.h
library-conan/: CMakeLists.txt  conanfile.py
library-vcpkg/: CMakeLists.txt
mlspp/: CMakeLists.txt  LICENSE
mlspp/cmake/: config.cmake.in  namespace.h.in
mlspp/include/: namespace.h  version.h
mlspp/include/mls/: common.h  core_types.h  credential.h  crypto.h  key_schedule.h  messages.h  session.h  state.h  tree_math.h  treekem.h
mlspp/lib/: CMakeLists.txt
mlspp/lib/bytes/: CMakeLists.txt
mlspp/lib/bytes/include/bytes/: bytes.h
mlspp/lib/bytes/include/tls/: compat.h  tls_syntax.h
mlspp/lib/bytes/src/: bytes.cpp
mlspp/lib/hpke/: CMakeLists.txt
mlspp/lib/hpke/include/hpke/: base64.h  certificate.h  digest.h  hpke.h  random.h  signature.h  userinfo_vc.h
mlspp/lib/hpke/src/: aead_cipher.cpp  aead_cipher.h  base64.cpp  certificate.cpp  common.cpp  common.h  dhkem.cpp  dhkem.h  digest.cpp  group.cpp  group.h  hkdf.cpp  hkdf.h  hpke.cpp  openssl_common.cpp  openssl_common.h  random.cpp  rsa.cpp  rsa.h  signature.cpp  userinfo_vc.cpp
mlspp/lib/mls_vectors/: CMakeLists.txt
mlspp/lib/mls_vectors/include/mls_vectors/: mls_vectors.h
mlspp/lib/mls_vectors/src/: mls_vectors.cpp
mlspp/lib/tls_syntax/: CMakeLists.txt
mlspp/lib/tls_syntax/include/tls/: compat.h
mlspp/lib/tls_syntax/src/: tls_syntax.cpp
mlspp/src/: common.cpp  core_types.cpp  credential.cpp  crypto.cpp  grease.cpp  grease.h  key_schedule.cpp  messages.cpp  session.cpp  state.cpp  tree_math.cpp  treekem.cpp
src/: sslclient.cpp  test.cpp  test.h  unittest.cpp  wsclient.cpp
src/modules/: CMakeLists.txt  dpp.cppm
testdata/: Robot.pcm  localhost.key  localhost.pem
(+672 files in other folders)
